Add APIs to get lists of locations and people
