# MealPlan/ClientApp/src/libs/swagger.json
@@ -53,6 +53,44 @@
         }
       }
     },
+    "/api/Location": {
+      "get": {
+        "tags": [
+          "Location"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/LocationDto"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/LocationDto"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/LocationDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/MealPlan": {
       "get": {
         "tags": [
@@ -108,6 +146,44 @@
           }
         }
       }
+    },
+    "/api/Person": {
+      "get": {
+        "tags": [
+          "Person"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PersonDto"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PersonDto"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PersonDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -120,10 +196,6 @@
             "format": "uuid"
           },
           "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "shortName": {
             "type": "string",
             "nullable": true
           },
@@ -164,13 +236,65 @@
             "nullable": true
           },
           "location": {
-            "$ref": "#/components/schemas/LocationDto"
+            "$ref": "#/components/schemas/MealPlanLocationDto"
           },
           "people": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/PersonDto"
+              "$ref": "#/components/schemas/MealPlanPersonDto"
             },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "MealPlanLocationDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "shortName": {
+            "type": "string",
+            "nullable": true
+          },
+          "foregroundColour": {
+            "type": "string",
+            "nullable": true
+          },
+          "backgroundColour": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "MealPlanPersonDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "shortName": {
+            "type": "string",
+            "nullable": true
+          },
+          "foregroundColour": {
+            "type": "string",
+            "nullable": true
+          },
+          "backgroundColour": {
+            "type": "string",
             "nullable": true
           }
         },
@@ -184,10 +308,6 @@
             "format": "uuid"
           },
           "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "shortName": {
             "type": "string",
             "nullable": true
           },
