# MealPlan/DTOs/People/PersonDto.cs
@@ -1,0 +1,13 @@
+﻿using MealPlan.Models;
+using Shared.Helpers.Mapping;
+
+namespace MealPlan.DTOs.People;
+
+[MapFrom(typeof(Person))]
+public class PersonDto
+{
+    public Guid Id { get; set; }
+    public string Name { get; set; } = string.Empty;
+    public string ForegroundColour { get; set; } = string.Empty;
+    public string BackgroundColour { get; set; } = string.Empty;
+}
